--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "next": "^12.1.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.0.0",
     "sass": "^1.54.3",
     "tailwindcss": "^2.2.19"
   },
-
   "license": "MIT"
 }
