--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "autoprefixer": "^10.0.2",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "next": "^12.1.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.0.0",
-    "react-hook-form": "^7.34.1",
+    "react-hook-form": "^7.34.2",
     "sass": "^1.54.3",
     "tailwindcss": "^2.2.19"
   },
