--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.34.2",
+    "react-quill": "^2.0.0",
     "sass": "^1.54.3",
     "tailwindcss": "^2.2.19"
   },
