--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.8.4",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.34.2",
     "react-quill": "^2.0.0",
