--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-icons": "^1.8.4",
     "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.0.0",
+    "react-ga": "^3.3.1",
     "react-hook-form": "^7.34.2",
     "react-quill": "^2.0.0",
     "sass": "^1.54.3",
