--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "basic-auth-token": "^0.4.2",
     "bootstrap": "^5.2.0",
+    "globby": "^13.1.2",
     "next": "^12.1.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
