--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "export": "next export"
   },
@@ -14,6 +15,7 @@
     "bootstrap": "^5.2.0",
     "globby": "^13.1.2",
     "next": "^12.1.5",
+    "next-sitemap": "^3.1.31",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.8.4",
