--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-dom": "^18.0.0",
         "react-facebook-pixel": "^1.0.4",
         "react-ga": "^3.3.1",
+        "react-gtm-module": "^2.0.11",
         "react-hook-form": "^7.34.2",
         "react-quill": "^2.0.0",
         "sass": "^1.54.3",
